<resources>
    <string name="app_name">Customer Support</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email:</string>
    <string name="forename">Forename:</string>
    <string name="surname">Surname:</string>
    <string name="dob">D.O.B:</string>
    <string name="email">Email Address:</string>
    <string name="contact_number">Contact Number:</string>
    <string name="date">Date:</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="create_new_customer">Create New Customer</string>
    <string name="search_for_customer">Search For Customer</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
